src/app/modules/media/components/mt-media-cover/mt-media-cover.component.scss
@use 'sass:math';

@use '@angular/material' as mat;
@import 'src/app/styles/colors';
@import 'src/app/styles/variables';

.cover {
  height: $media-cover-height;
  width: $media-cover-width;

  background-position: center center;
  background-size: cover;
  overflow: hidden;
  position: relative;

  &:not(:hover) {
    .backdrop {
      opacity: 0;
      visibility: hidden;
    }
  }

  .backdrop {
    font-size: $font-size-88;
    padding: $spacing-4xs;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    transition: $transition-duration;

    align-items: end;
    display: flex;
    justify-content: center;

    background: rgba(black, math.div(2, 3));
    color: white;

    .clickable {
      transition: $transition-duration;

      &:hover {
        @extend .text-orange;
      }
    }
  }

  .title {
    > div {
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }

  .status-badge {
    $size: 12px;
    $shadow-size: $size + 1px;
    border-color: transparent #0006;
    border-style: solid;
    border-width: 0px 0px $shadow-size $shadow-size;
    position: absolute;
    top: 0;

    &:after {
      content: '';
      display: block;
      position: absolute;

      border-style: solid;
      border-width: 0px 0px $size $size;
      margin-left: -1 * $shadow-size;
    }

    &.completed:after {
      @extend .border-x-green;
    }
    &.repeating:after {
      @extend .border-x-blue;
    }
    &.current:after,
    &.planning:after,
    &.watching:after {
      @extend .border-x-orange;
    }
    &.paused:after {
      @extend .border-x-pink;
    }
    &.dropped:after {
      @extend .border-x-red;
    }
  }

  .cover-actions-container {
    display: flex;
    align-items: center;
    justify-content: space-around;

    position: absolute;
    height: calc(100% - $spacing-2xl * 2);
    width: 100%;
    top: $spacing-2xl;
    left: 0;

    .cover-action {
      $size: 1.25em;
      display: contents;
      font-size: $font-size-100;
      height: $size;
      line-height: initial;
      text-shadow: 0 0 2px black;
      width: $size;
    }
  }
}

